# recurser

./: .gitignore  LICENSE  README.md  pyproject.toml
recurser/: __init__.py  core.py
