[tool.poetry]
name = "recurser"
version = "0.1.0"
description = "find recursive file or dir and execute function."
authors = ["hinata <you@example.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
rich = "^12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
